changed some layouts of files and constraints

--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -3,7 +3,7 @@
 <% @surveys.each do |survey| %>
   <ul>
     <li> <%= link_to survey.title, survey %>
-        <%= link_to "delete", survey_path(id:survey.id), method: :delete %>
       <%= survey.description %> </li>
   </ul>
 <% end %>
+  <%= button_to "User Profile", user_path, method: :get %>
