--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <h2><%= @user.username %></h2>
 <% @user.surveys.each do |sur| %>
-<%= sur.title %><br><br>
+<%= sur.title %><br>
+<% if sur.creator_id == session[:user_id] %>
+  <%= link_to "delete", survey_path(id: sur.id), method: :delete %><br><br>
+  <% end %>
 <% end %>
 
 <%= button_to "Logout", logout_path, method: :delete, :class => :destroy %><br><br>
