--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,4 +1,7 @@
 <h4> AVAILABLE SURVEYS </h4>
+<%=button_to 'Log Out', logout_path, method: :delete%>
+<%=button_to 'Create a survey', new_survey_path, method: :get %>
+<%=button_to 'User Profile', user_path(id: session[:user_id]), method: :get%>
 
 <% @surveys.each do |survey| %>
   <ul>
