fixed some choice controller and completedsurvey controller bugs, working

--- a/app/views/completedsurveys/new.html.erb
+++ b/app/views/completedsurveys/new.html.erb
@@ -1,3 +1,4 @@
 <h2>You have completed this survey! Thank you!</h2>
 
-<%=button_to 'Complete', new_survey_completedsurvey_path%>
+<%=button_to 'Complete', survey_completedsurveys_path, method: :post%>
+
