--- a/app/views/completedsurveys/index.html.erb
+++ b/app/views/completedsurveys/index.html.erb
@@ -1,5 +1,5 @@
 <h2>List of completed surveys:</h2>
 
-<%@completedsurveys.each do |survey|%>
-  <%=survey.title%><br>
+<%@completedsurveys.each do |csurvey|%>
+  <%=csurvey.survey.title%><br>
 <%end%>
