--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -6,3 +6,20 @@
   Description: <%= f.text_field :description %>
   <%= f.submit "UPDATE" %>
 <% end %>
+
+<h4> EDIT QUESTIONS AND CHOICES</h4>
+
+<% @questions.each do |question| %>
+  <ul>
+    <li> 
+    <%= question.content %>
+    <%=button_to 'Edit Question', edit_question_path(id: question.id), method: :get %><br>
+    </li> 
+  <%@choices.each do |choice|%>
+    <%if choice.question_id == question.id%>
+      <%=choice.content%><br>
+      <%=button_to 'Edit Choice', edit_choice_path(id: choice.id), method: :get %><br>
+    <%end%>
+  <%end%>
+  </ul>
+<% end %>
