--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,5 +1,6 @@
-<h4> EDIT THE TITLE AND DESCRIPTION OF YOUR SURVEY </h4>
+<%=button_to 'Back to Main Page', surveys_path, method: :get%>
 
+<h4> EDIT THE TITLE AND DESCRIPTION OF YOUR SURVEY </h4>
 
 <%= form_for @survey do |f| %>
   Title: <%= f.text_field :title %>
