--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,7 +1,12 @@
 <div id="hidethisshit">
 <h1>Welcome to Survey Panda!!!!!</h1>
+<div class="panda" style="text-align: center">
+  <img src="http://2.bp.blogspot.com/-HJuXBWKfP9o/VKEXJp2EdrI/AAAAAAAAHbY/oxok6GQsogo/s1600/red%2Bpanda%2Btrying%2Bto%2Bopen%2Ba%2Bdoor.gif" />
+</div>
 
 <h3>Survey Panda allows a user to create a survey with questions and choices of their choosing. In addition to creating a survey, users can answer other users surveys, allowing each user to be creative and get feedback (or general answers) on their surveys.</h3>
 <%= button_to "Login", login_path, method: :get, id: "login" %><br>
 <%= button_to "Sign Up", new_user_path, method: :get, id: "signup" %>
 </div>
+
+
